- testing Class Wallet